<resources>
    <string name="app_name">LimeChat</string>
    <string name="message_welcome">Welcome to LimeChat!</string>
    <string name="message_register">Register New Account</string>
    <string name="message_register_warning">Please fill the required fields</string>
    <string name="message_login">Login into existing account</string>
    <string name="message_settings">Hi,this is Rick using LimeChat!</string>
    <string name="message_status_error">Unsuccessful status change :(</string>
    <string name="message_status_success">Status successfully changed!</string>
    <string name="message_register_success">Hi and Welcome to LimeChat!</string>
    <string name="message_change_image_success">Successfully changing Profile Picture!</string>
    <string name="message_change_image_error">Unsuccessfully changing Profile Picture! :(</string>

    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Log out</string>
    <string name="account_settings">Account Settings</string>
    <string name="changeImage">Change Image</string>
    <string name="changeStatus">Change Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="select_image">Select Image</string>
    <string name="TAG_LOGIN">LOGIN</string>
    <string name="TAG_REGISTER">REGISTER</string>
    <string name="TAG_SETTINGS">SETTINGS</string>

    <string name="tab_requests">Requests</string>
    <string name="tab_chats">Chats</string>
    <string name="tab_friends">Friends</string>

    <string name="dummyName">Rick Sanchez</string>
    <string name="registration_message_status">Hi, I\'m new to LimeChat!</string>

    <string name="db_Users">Users</string>
    <string name="db_Name">name</string>
    <string name="db_Status">status</string>
    <string name="db_Image">image</string>
    <string name="db_ThumbImage">thumb_image</string>

    <string name="storage_profile_images">profile_images</string>
    <string name="storage_thumbnail_images">thumbs</string>
</resources>
